Fix SME disarm (#5)
* Fix SME disarm

* Some hacks

* Cleanup & Version 0.1.0